# Scalar-finals

./: .env.example  .gitignore  Dockerfile  HACKATHON_README.md  README.md  REAL_WORLD_IMPACT.md  app.py  blog_post.md  config.py  docker-compose.yml  forge_cache.db  forge_memory.db  index.pack.gz.old  inference.py  openenv.yaml  pretrain.py  pyproject.toml  pyrightconfig.json  requirements.txt  validate-submission.sh  visualizer.html
agents/: __init__.py  gnn_policy.py  heuristic_agent.py  llm_agent.py  ppo_agent.py
agents/adversarial/: __init__.py  generator_agent.py  (+1 more)
blue_team/: gin_predictor.py  replay_buffer.py  society_of_thought.py
checkpoints/: gin_model.pt  hae_model.pt
docs/: blog_post.md
env/: __init__.py  claim_graph.py  forge_env.py  misinfo_env.py  reward.py
frontend/: __init__.py  components.py  constants.py  theme.py  visualizer.html
notebooks/: trl_forge_ma.ipynb
red_team/: red_agent.py
rewards/: hierarchical_reward.py  tactic_edit_dist.py
scripts/: claimbuster_eval.py  download_liar.py  inference.py  publish_blog.py  run_baseline.py  run_selfplay.py  verify_full_system.py
server/: __init__.py  main.py  schemas.py
spatial-saas/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
tools/: __init__.py  cross_reference.py  entity_link.py  network_cluster.py  query_source.py  temporal_audit.py  tool_registry.py  trace_origin.py
training/: eval.py  forge_grpo_colab.ipynb  forge_grpo_colab_(1) (1).ipynb  gin_trainer_ma.py  kaggle_grpo_notebook.py  master_fix.py  ppo_trainer_ma.py  red_grpo_colab.ipynb  train_ppo.py
(+27 files in other folders)
